--- a/dado.html
+++ b/dado.html
@@ -16,6 +16,11 @@
         </div>
         <p id="total">Aqui ponemos resultado O con alert</p>
         <button name="boton" id="boton">GIRAR DADOS</button>
+
+        <button name="cooki" id="cooki">COOKILANDIA</button>
+        <button name="cookiRet" id="cookiRet">COOKILANDIARET</button>
+        <button name="cookiDel" id="cookiDel">COOKILANDIADel</button>
+
     </div>
 
     <script src="dado.js"></script>
